--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
   <body>
     <hr>
 
-    <img src="images/headshot.jpg" alt="Harrison Kong's headshot" width="20%">
+    <img src="images/headshot.jpg" alt="Danielle Ivy Austria's headshot" width="20%">
 
     <h1>Danielle Ivy R.Austria</h1>
     <h4>4th Year - BS Accounting Information System</h4>
