--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p><a href="resume.html">My Resume</a> | <a href="https://github.com/danielleivyaustria-eng">My Github</a></p>
     <h2>Contact</h2>
 
-    <p>Email: <a href="mailto:2022diraustria@live.mcl">2022diraustria@live.mcl.edu.ph</a></p>
+    <p>Email: <a href="mailto:austriadanielleivy@gmail.com">austriadanielleivy@gmail.com</a></p>
   </body>
 
   <footer>
