--- a/resume.html
+++ b/resume.html
@@ -16,18 +16,18 @@
     <h1>Danielle Ivy R.Austria</h1>
     <h4>4th Year - BS Accounting Information System</h4>
 
-    <p>Email: <a href="mailto:harrisonkong@skyroute66.com" target="_blank">harrisonkong@skyroute66.com</a></p>
+    <p>Email: <a href="austriadanielleivy@gmail.com" target="_blank">austriadanielleivy@gmail.com</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
 
     <h2>Portfolio</h2>
-      <h3>GitHub: <a href="https://github.com/harrisonkong" target="_blank">https://github.com/harrisonkong</a></h3>
+      <h3>GitHub: <a href="https://github.com/austriadanielleivy-eng" target="_blank">https://github.com/austriadanielleivy-eng</a></h3>
 
     <h2>Education</h2>
 
-    <h3>University of Massachusetts, Boston</h3>
-    <h4>B.S. Computer Science, GPA 3.88</h4>
+    <h3>Mapua Malayan Colleges Laguna, Philippines</h3>
+    <h4>B.S. Accounting Information Systems, GPA 1.3</h4>
 
-    <h2>Professional Experiences</h2>
+    <h2>Interest</h2>
 
     <h3>Subject Matter Expert / Online Instructor</h3>
     <h4>Coursera, Mountain View, CA</h4>
