--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <header>
     <title>Danielle Ivy Austria's Portal</title>
+    <link rel="stylesheet" href="css/master.css"
   </header>
 
   <body>
