--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,11 @@
   <header>
     <title>Daniell Ivy R. Austria's Resume</title>
     <link rel="stylesheet" href="css/master.css">
+    <link rel="FaviconIcon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut" href="favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrint-to-fit=no">
+    <meta name="name" content="Danielle Ivy Austria's Portal">
+    <meta name="robots" content="noindex, nofollow">
   </header>
 
   <body>
