--- a/resume.html
+++ b/resume.html
@@ -34,23 +34,42 @@
     <h4>B.S. Accounting Information Systems, GPA 1.3</h4>
 
     <h2>Interest</h2>
-    <p></p>
+    <p>blank</p>
 
-    <h3>Subject Matter Expert / Online Instructor</h3>
-    <h4>Coursera, Mountain View, CA</h4>
-    <h5>March 2020 - Present</h5>
-      <ul>
-        <li>Create interactive online IT courses</li>
-        <li>Teach students worldwide</li>
-      </ul>
+  <h2>Extracurricular Activities</h2>
+  <ul>
+    <li>Bona Fide Member of NFJPIA-R4, Federation Year 2023-2024</li>
+    <li>Member of JPIA-MMCL, Federation Year 2024-2025</li>
+  </ul>
 
-    <h3>Founder, Software Engineer</h3>
-    <h4>skyRoute66, Los Angeles, CA</h4>
-    <h5>January 2019 - Present</h5>
-      <ul>
-        <li>Author and publish mobile apps, reusable iOS UI modules</li>
-        <li>Independent computer service contractor</li>
-      </ul>
+  <h2>Certificates</h2>
+  <h3>Participation</h3>
+  <ul>
+    <li>Sky-High: Fulfilling the Dream Business Experience (2023)</li>
+    <li>ReFresh: Knowing the Start, Shaping the Future (2024)</li>
+    <li>State of the Organization's Address (SORGA): A JPIA Ceremony for the First Term (2025)</li>
+  </ul>
+  <h3>Seminars & Webinars</h3>
+  <ul>
+    <li>Future Forward: Navigating Corporate Sustainability Today (2025)</li>
+    <li>From Classroom to Career: Navigating the Path to Professional Excellence (2025)</li>
+    <li>AI-Driven Insights: The Future of Data Analytics (2025)</li>
+  </ul>
+
+  <h2>Coursera</h2>
+  <ul>
+    <li>Start Writing Prompts Like a Pro</li>
+    <li>Design Prompts for Everyday Work Tasks</li>
+    <li>Use AI Responsibly</li>
+    <li>Stay Ahead of the AI Curve</li>
+    <li>Level Up Data Analysis and Presentation Building</li>
+    <li>Maximize Productivity with AI Tools</li>
+    <li>Introduction to AI</li>
+    <li>Google AI Essentials Specialization</li>
+    <li>Fundamentals of Database Systems</li>
+    <li>Discover the Art of Prompting</li>
+  </ul>
+    
   </body>
 
   <footer>
