--- a/resume.html
+++ b/resume.html
@@ -34,41 +34,41 @@
     <h4>B.S. Accounting Information Systems, GPA 1.3</h4>
 
     <h2>Interest</h2>
-    <p>blank</p>
+    <p>Engaging with diverse narratives through reading, exploring various soundscapes via different music genres, and sharpening cognitive skills with a variety of logic puzzles.</p>
 
-  <h2>Extracurricular Activities</h2>
-  <ul>
-    <li>Bona Fide Member of NFJPIA-R4, Federation Year 2023-2024</li>
-    <li>Member of JPIA-MMCL, Federation Year 2024-2025</li>
-  </ul>
-
-  <h2>Certificates</h2>
-  <h3>Participation</h3>
-  <ul>
-    <li>Sky-High: Fulfilling the Dream Business Experience (2023)</li>
-    <li>ReFresh: Knowing the Start, Shaping the Future (2024)</li>
-    <li>State of the Organization's Address (SORGA): A JPIA Ceremony for the First Term (2025)</li>
-  </ul>
-  <h3>Seminars & Webinars</h3>
-  <ul>
-    <li>Future Forward: Navigating Corporate Sustainability Today (2025)</li>
-    <li>From Classroom to Career: Navigating the Path to Professional Excellence (2025)</li>
-    <li>AI-Driven Insights: The Future of Data Analytics (2025)</li>
-  </ul>
-
-  <h3>Coursera</h3>
-  <ul>
-    <li>Start Writing Prompts Like a Pro</li>
-    <li>Design Prompts for Everyday Work Tasks</li>
-    <li>Use AI Responsibly</li>
-    <li>Stay Ahead of the AI Curve</li>
-    <li>Level Up Data Analysis and Presentation Building</li>
-    <li>Maximize Productivity with AI Tools</li>
-    <li>Introduction to AI</li>
-    <li>Google AI Essentials Specialization</li>
-    <li>Fundamentals of Database Systems</li>
-    <li>Discover the Art of Prompting</li>
-  </ul>
+    <h2>Extracurricular Activities</h2>
+    <ul>
+      <li>Bona Fide Member of NFJPIA-R4, Federation Year 2023-2024</li>
+      <li>Member of JPIA-MMCL, Federation Year 2024-2025</li>
+    </ul>
+  
+    <h2>Certificates</h2>
+    <h3>Participation</h3>
+    <ul>
+      <li>Sky-High: Fulfilling the Dream Business Experience (2023)</li>
+      <li>ReFresh: Knowing the Start, Shaping the Future (2024)</li>
+      <li>State of the Organization's Address (SORGA): A JPIA Ceremony for the First Term (2025)</li>
+    </ul>
+    <h3>Seminars & Webinars</h3>
+    <ul>
+      <li>Future Forward: Navigating Corporate Sustainability Today (2025)</li>
+      <li>From Classroom to Career: Navigating the Path to Professional Excellence (2025)</li>
+      <li>AI-Driven Insights: The Future of Data Analytics (2025)</li>
+    </ul>
+  
+    <h3>Coursera</h3>
+    <ul>
+      <li>Start Writing Prompts Like a Pro</li>
+      <li>Design Prompts for Everyday Work Tasks</li>
+      <li>Use AI Responsibly</li>
+      <li>Stay Ahead of the AI Curve</li>
+      <li>Level Up Data Analysis and Presentation Building</li>
+      <li>Maximize Productivity with AI Tools</li>
+      <li>Introduction to AI</li>
+      <li>Google AI Essentials Specialization</li>
+      <li>Fundamentals of Database Systems</li>
+      <li>Discover the Art of Prompting</li>
+    </ul>
     
   </body>
 
