--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
     <img src="images/headshot.jpg" alt="Danielle Ivy Austria's headshot" width="20%">
 
     <h1>Danielle Ivy R.Austria</h1>
-    <h4>4th Year - BS Accounting Information System</h4>
+    <h4>4th Year - B.S. AIS, MIS Analyst</h4>
 
     <p>Email: <a href="austriadanielleivy@gmail.com" target="_blank">austriadanielleivy@gmail.com</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
@@ -31,7 +31,7 @@
     <h2>Education</h2>
 
     <h3>Mapua Malayan Colleges Laguna, Philippines</h3>
-    <h4>B.S. Accounting Information Systems, GPA 1.3</h4>
+    <h4>B.S. Accounting Information Systems, GPA 1.375</h4>
 
     <h2>Interest</h2>
     <p>Engaging with diverse narratives through reading, exploring various soundscapes via different music genres, and sharpening cognitive skills with a variety of logic puzzles.</p>
