--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
     </ul>
   
     <h2>Certificates</h2>
-    <h3>Participation</h3>
+    <h3>Non-Academic</h3>
     <ul>
       <li>Sky-High: Fulfilling the Dream Business Experience (2023)</li>
       <li>ReFresh: Knowing the Start, Shaping the Future (2024)</li>
