--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     <img src="images/banner.jpg" width="75%" alt="Banner">
     <h1>Danielle Ivy Austria's Portal</h1>
     <h2>About me</h2>
-    <p>I am college student studying BS Accounting Information System</p>
-    <p>I am a 4th year student in Mapua Malayan Colleges Laguna</p>
-    <P>I'm a dedicated student who is always eager to learn and grow, both inside
-      an outside the classroom</p>
+    <p>She is a college student studying BS Accounting Information System</p>
+    <p>Currently a 4th year student in Mapua Malayan Colleges Laguna</p>
+    <P>She is also a dedicated student who is always eager to learn and grow, both inside an outside the classroom</p>
     <h2>Credentials and Portfolio</h2>
 
     <p><a href="resume.html">My Resume</a> | <a href="https://github.com/austriadanielleivy-eng">My Github</a></p>
