--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
     <h3>Mapua Malayan Colleges Laguna, Philippines</h3>
     <h4>B.S. Accounting Information Systems, GPA 1.375</h4>
 
-    <h2>Interest</h2>
+    <h2>Leisure Pursuits</h2>
     <p>Engaging with diverse narratives through reading, exploring various soundscapes via different music genres, and sharpening cognitive skills with a variety of logic puzzles.</p>
 
     <h2>Extracurricular Activities</h2>
