--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <p>She is a college student studying BS Accounting Information System</p>
     <p>Currently a 4th year student in Mapua Malayan Colleges Laguna</p>
     <P>She is also a dedicated student who is always eager to learn and grow, both inside an outside the classroom</p>
+
+    <h2>Leisure Pursuits</h2>
+    <p>Engaging with diverse narratives through reading, exploring various soundscapes via different music genres, and sharpening cognitive skills with a variety of logic puzzles.</p>
+    
     <h2>Credentials and Portfolio</h2>
 
     <p><a href="resume.html">My Resume</a> | <a href="https://github.com/austriadanielleivy-eng">My Github</a></p>
