--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="images/banner.jpg" width="75%" alt="Banner">
     <h1>Danielle Ivy Austria's Portal</h1>
     <h2>About me</h2>
-    <p>She is a college student studying BS Accounting Information System</p>
+    <p>She is a college student studying B.S. Accounting Information System</p>
     <p>Currently a 4th year student in Mapua Malayan Colleges Laguna</p>
     <P>She is also a dedicated student who is always eager to learn and grow, both inside an outside the classroom</p>
 
