--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
   <body>
     <hr>
 
-    <img src="images/headshot.jpg" alt="Danielle Ivy Austria's headshot" width="20%">
+    <img src="resumebanner.jpg" alt="Danielle Ivy Austria's headshot" width="20%">
 
     <h1>Danielle Ivy R.Austria</h1>
     <h4>4th Year - B.S. AIS, MIS Analyst</h4>
