--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 
 <!-- this is a comment for human! -->
@@ -17,10 +18,10 @@
   <body>
     <hr>
 
-    <img src="resumebanner.jpg" alt="Danielle Ivy Austria's headshot" width="20%">
+    <img src="resumebanner.jpg" alt="Danielle Ivy Austria's headshot" width="63%">
 
-    <h1>Danielle Ivy R.Austria</h1>
-    <h4>4th Year - B.S. AIS, MIS Analyst</h4>
+    <h1>Danielle Ivy R. Austria</h1>
+    <h4>4th Year - B.S. AIS Student, MIS Analyst</h4>
 
     <p>Email: <a href="austriadanielleivy@gmail.com" target="_blank">austriadanielleivy@gmail.com</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
