--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 
 <!-- this is a comment for human! -->
@@ -15,9 +16,9 @@
   </header>
 
   <body>
-    <img src="dirabanner.jpg" width="60%" alt="Banner">
+    <img src="dirabanner.jpg" width="63%" alt="Banner">
     <h1>Danielle Ivy Austria's Portal</h1>
-    <h2>About me</h2>
+    <h2>About Me</h2>
     <p>She is a college student studying B.S. Accounting Information System</p>
     <p>Currently a 4th year student in Mapua Malayan Colleges Laguna</p>
     <P>She is also a dedicated student who is always eager to learn and grow, both inside an outside the classroom</p>
