--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
   <body>
     <hr>
 
-    <img src="resumebanner.jpg" alt="Danielle Ivy Austria's headshot" width="63%">
+    <img src="resumebanner.jpg" alt="Danielle Ivy Austria's headshot" width="850px">
 
     <h1>Danielle Ivy R. Austria</h1>
     <h4>4th Year - B.S. AIS Student, MIS Analyst</h4>
