--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
 
   <body>
-    <img src="dirabanner.jpg" width="63%" alt="Banner">
+    <img src="dirabanner.jpg" width="850px" alt="Banner">
     <h1>Danielle Ivy Austria's Portal</h1>
     <h2>About Me</h2>
     <p>She is a college student studying B.S. Accounting Information System</p>
